fixed double border btw td

--- a/css/refactor/includes/business-tables.less
+++ b/css/refactor/includes/business-tables.less
@@ -12,6 +12,7 @@ div.table {
     margin-bottom: 22px;
     padding-top: 1em;
     padding-bottom: 1em;
+    border-collapse: collapse;
     // If a table spans more than 1 page then put caption on all following pages
     prince-caption-page: all;
 
